[gd_scene load_steps=3 format=3 uid="uid://dcuw63i6fo7at"]

[ext_resource type="TileSet" uid="uid://bjapols5s8jig" path="res://resources/track_tiles.tres" id="1_jc4nj"]
[ext_resource type="Script" path="res://components/base_track.gd" id="1_mj38o"]

[node name="BaseTrack" type="Node2D"]
script = ExtResource("1_mj38o")

[node name="TileMap" type="TileMap" parent="."]
z_index = -1
z_as_relative = false
tile_set = ExtResource("1_jc4nj")
format = 2

[node name="Checkpoints" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="Trajectory" type="Path2D" parent="."]

[node name="SpawnPoint" type="Marker2D" parent="."]
rotation = -1.5708

[node name="Line2D" type="Line2D" parent="."]
visible = false

[connection signal="body_shape_entered" from="Checkpoints" to="." method="_on_checkpoints_body_shape_entered"]
